force-app/main/default/objects/Health_Record__c/Health_Record__c.object-meta.xml
<CustomObject>
    <label>Health Record</label>
    <nameField>
        <displayFormat>HR - {0000}</displayFormat>
        <label>Health Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Health Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>