force-app/main/default/objects/Health_Record__c/fields/Current_Medication__c.field-meta.xml
<CustomField>
    <fullName>Current_Medication__c</fullName>
    <label>Current Medication</label>
    <type>TextArea</type>
</CustomField>