force-app/main/default/objects/Health_Record__c/fields/Date_of_Record__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Record__c</fullName>
    <label>Date of Record</label>
    <type>Date</type>
</CustomField>