force-app/main/default/objects/Health_Record__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Health Records</relationshipLabel>
    <relationshipName>Health_Records</relationshipName>
    <type>Lookup</type>
</CustomField>